# -mtcnn_for_java

./: CMakeLists.txt  README.md  detect
jni/: mtcnn.cpp  mtcnn.h  network.h  pBox.h  pikaqiu.cpp
